<resources>
    <string name="app_name">yamii</string>
    <string name="utsu_mondai">ここ1ヶ月間について答えてください。</string>
    <string name="utsu_hantei1">週に3回以上運動をしていますか？</string>
    <string name="utsu_hantei2">体がだるく、疲れやすいですか？</string>
    <string name="utsu_hantei3">上司や身内から怒られていますか？</string>
    <string name="utsu_hantei4">誰かに気を使いすぎていますか？</string>
    <string name="utsu_hantei5">なにか楽しいことはありましたか？</string>
    <string name="utsu_hantei6">朝や夜に無気力感はありますか？</string>
    <string name="utsu_hantei7">体重が2kg以上太ったり、\n 痩せたりしていますか？</string>
    <string name="utsu_hantei8">不眠だったり\n過眠だったりしますか？</string>
    <string name="utsu_hantei9">昔とは違い、仕事で\nケアレスミスが多いですか？</string>
    <string name="utsu_hantei10">隙間時間があれば\nスマホを見ていませんか？</string>
    <string name="utsu_hantei11">原因不明の肩こり、\n腰痛がありませんか</string>
    <string name="utsu_hantei12">会社に行くときや家に帰るとき、\n怖かったりしますか？</string>
    <string name="utsu_hantei13">人生の満足感は高いですか？</string>
    <string name="utsu_hantei14">後戻りできない状況に\nあると思いますか？</string>
    <string name="utsu_hantei15">真夜中に起きて、かつ2時間以上\n寝付けないときはありますか？</string>
    <string name="utsu_hantei16">自分は無能だと思いますか？</string>
    <string name="utsu_hantei17">酒を飲む量が増えたりしましたか？</string>
    <string name="utsu_hantei18">性欲はありますか？</string>
    <string name="utsu_hantei19">自殺願望はありますか？</string>
    <string name="utsu_hantei20">他人と比べて（または比べられて）\n落ち込んだりしましたか？</string>
    <string name="yes">はい</string>
    <string name="no">いいえ</string>
    <string name="hantei">判定する</string>
    <string name="clear">クリア</string>
    <string name="next">次へ</string>
    <string name="back">前へ</string>
    <string name="your">あなたの点数は…</string>
    <string name="point">点</string>
    <string name="hantei_kekka1">あなたはうつの可能性は低いです。</string>
    <string name="setsumei1">あなたはうつの可能性は低いです。ちゃんと日常を楽しめていますし、仕事や趣味への気力があります。今後も何か異変があればご利用ください。うつは自分はかかっていないと思う人が多いです。早めの治療が回復を早めます。</string>
    <string name="hantei_kekka2">あなたはうつの可能性があります。</string>
    <string name="setsumei2">あなたはうつの可能性があります。仕事や家庭などでうまくいってないことはありませんか？うつは早めの治療が早期回復には必須です。主治医や産業医に相談するのがよいでしょう。近くの病院も検索しておきますね。</string>
    <string name="hantei_kekka3">あなたはうつの可能性が高いです。</string>
    <string name="setsumei3">あなたはうつの可能性が高いです。仕事や家庭がうまくいってないんでしょう。つらい気持ち分かります。しかし、時には逃げてもよいのではないのですか？周りに迷惑をかけるのは分かりますが、このままだと逃げた時よりもっと迷惑をかけてしまうかもしれません。早めに病院に行きましょう。</string>
    <string name="back_first">前に戻る</string>
    <string name="near_hospital">近くの病院を探す。（Google Map起動）</string>
    <string name="attention">このアプリの判定は製作者の経験による判定です。正式な診断は病院で</string>
</resources>