<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hanteiTyuukan"
    android:background="#91FF90">

    <TextView
        android:id="@+id/your2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/your"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/tensuu2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="37dp"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="@+id/your2"
        app:layout_constraintTop_toBottomOf="@+id/your2"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/point2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/point"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/tensuu2"
        app:layout_constraintStart_toEndOf="@+id/tensuu2"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/hanteikekka2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/hantei_kekka2"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tensuu2"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/setsumei2"
        android:layout_width="359dp"
        android:layout_height="88dp"
        android:layout_marginTop="16dp"
        android:text="@string/setsumei2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/hanteikekka2"
        android:background="#FFFFFF"/>

    <Button
        android:id="@+id/backfirst"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickBack"
        android:text="@string/back_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchHospital" />

    <Button
        android:id="@+id/searchHospital"
        android:layout_width="379dp"
        android:layout_height="42dp"
        android:layout_marginTop="64dp"
        android:onClick="nearHospital"
        android:text="@string/near_hospital"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setsumei2" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="325dp"
        android:layout_height="39dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/attention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backfirst"
        android:background="#FFFFFF" />

</androidx.constraintlayout.widget.ConstraintLayout>