<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".hanteiSaitei"
    android:background="#91FF90">

    <TextView
        android:id="@+id/your1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:text="@string/your"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/tensuu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="37dp"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="@+id/your1"
        app:layout_constraintTop_toBottomOf="@+id/your1"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/point1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/point"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="@+id/tensuu"
        app:layout_constraintStart_toEndOf="@+id/tensuu"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/kekka1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/hantei_kekka1"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tensuu"
        android:background="#FFFFFF"/>

    <TextView
        android:id="@+id/setsumei1"
        android:layout_width="373dp"
        android:layout_height="84dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:text="@string/setsumei1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kekka1"
        android:background="#FFFFFF"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toBottomOf="@+id/setsumei1"
        app:srcCompat="@drawable/odaijini"
        tools:layout_editor_absoluteX="33dp" />

    <Button
        android:id="@+id/backpage1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:onClick="onClickBack"
        android:text="@string/back_first"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="331dp"
        android:layout_height="53dp"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/attention"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backpage1"
        android:background="#FFFFFF"/>
</androidx.constraintlayout.widget.ConstraintLayout>